--- a/themes/lescollections/assets/pawtucket/css/main.css
+++ b/themes/lescollections/assets/pawtucket/css/main.css
@@ -2660,10 +2660,18 @@ div.advancedSearchField {
 	padding-right: 0;
 }
 
+/*
+ * Customizations for storymaps
+ */
+
 .vco-storymap p a, .vco-storymap p a:hover, .vco-storymap p a:focus {
     color:white !important;
     background: #c34528 !important;
     border-radius:4px !important;
     padding:1px 4px !important;
     text-shadow: none !important;
+}
+
+.vco-storymap h2.vco-headline-title {
+    text-transform: uppercase;
 }
