capitalize set items title

--- a/themes/lescollections/assets/pawtucket/css/main.css
+++ b/themes/lescollections/assets/pawtucket/css/main.css
@@ -2672,6 +2672,6 @@ div.advancedSearchField {
     text-shadow: none !important;
 }
 
-.vco-storymap h2.vco-headline-title {
+h2.vco-headline {
     text-transform: uppercase;
 }
