lowering storymap.js logo & title to avoid losing focus on map

--- a/themes/lescollections/assets/pawtucket/css/main.css
+++ b/themes/lescollections/assets/pawtucket/css/main.css
@@ -2675,3 +2675,10 @@ div.advancedSearchField {
 h2.vco-headline {
     text-transform: uppercase;
 }
+
+.vco-map .leaflet-container .leaflet-control-attribution .vco-knightlab-brand, .vco-map .leaflet-container .leaflet-control-attribution a.vco-knightlab-brand {
+    font-size:inherit !important;
+}
+.vco-map .leaflet-container .leaflet-control-attribution .vco-knightlab-brand span, .vco-map .leaflet-container .leaflet-control-attribution a.vco-knightlab-brand span {
+    color:black !important;
+}
