fixing logo height

--- a/themes/maisonlosseau/assets/pawtucket/css/main.css
+++ b/themes/maisonlosseau/assets/pawtucket/css/main.css
@@ -241,7 +241,7 @@ h1 i {
 		border-bottom:1px solid #A28656;
 		margin-bottom:0;
 		background: url('../graphics/logo_270px.jpg');
-		background-size: 20% auto;
+		background-size: 250px auto;
 		background-repeat: no-repeat;
 		background-position: 
 		background-color:red;
